Fix form spacing

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -428,6 +428,7 @@ nav {
         font-size: $fs-300;
         color: $color-text;
         text-align: left;
+        margin: 0 1rem;
     }
 
     input,
